# zero2prod

./: Cargo.toml  Dockerfile1  Dockerfile2  Dockerfile3  Dockerfile4  Readme  configuration.yaml
.sqlx/: query-67c91964e576028457f385b5fcc492e6748fbbdad958b20fc2912084b1f6cf2e.json
configuration/: base.yaml
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
