[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.204"
serde-aux = "4.5.0"
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio","tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.4"
tracing-actix-web = "0.7.6"
secrecy = { version = "0.8", features = ["serde"] }
tracing-opentelemetry = { version = "0.26.0"}
unicode-segmentation = "1.12.0"
validator = "0.16.1"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }


[dev-dependencies]
reqwest = { version = "0.11.27", features = ["json"] }
once_cell = "1.19.0"
claims = "0.7.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5.22"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["rt", "macros"] }